remove comment on ssl port in launchSetting.json

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:26098"
-      //"sslPort": 44338
+      "sslPort": 44338
     }
   },
   "profiles": {
