add Admin area to Areas ,add view files and delete Data and Models folder

--- a/GurmanBookStore.csproj
+++ b/GurmanBookStore.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
 
